Fix ribbon covering hover sidedock

--- a/src/features/hover-sidedock.scss
+++ b/src/features/hover-sidedock.scss
@@ -22,7 +22,7 @@ body:not(.is-mobile).hover-sidedock {
     transition: var(--anim-duration-moderate) var(--anim-motion-baseline), transform var(--anim-duration-moderate), background-color var(--anim-duration-moderate) !important;
   }
   .mod-sidedock.is-sidedock-collapsed {
-    z-index: var(--layer-sidedock);
+    z-index: 12;
 
     &:not([style*="overflow: hidden;"]) {
       display: flex !important;
